--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
+dist: trusty
 language: python
+
 python:
   - "2.7"
-# command to install dependencies
+
 install:
-  - "pip install -e ."
-  - "pip install -r requirements.txt"
-  - "pip install -r dev_requirements.txt"
-# command to run tests
-script: coverage run --source=ckanext.ckanpackager setup.py nosetests
+  - sh ckanext/ckanpackager/tests/bin/build.sh
+
+services:
+  - redis-server
+  - postgresql
+
+addons:
+  postgresql: "9.4"
+
+script: coverage run --source=ckanext.ckanpackager setup.py nosetests --ckan --with-pylons=ckanext/ckanpackager/tests/bin/test.ini --nologcapture --debug=ckantest,ckanext.ckanpackager --rednose
+
 after_success: coveralls
