--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,13 @@
-dist: trusty
+sudo: required
+
 language: python
 
-python:
-  - "2.7"
-
-install:
-  - sh ckanext/ckanpackager/tests/bin/build.sh
-
 services:
-  - redis-server
-  - postgresql
+  - docker
 
-addons:
-  postgresql: "9.4"
-
-script: coverage run --source=ckanext.ckanpackager setup.py nosetests --ckan --with-pylons=ckanext/ckanpackager/tests/bin/test.ini --nologcapture --debug=ckantest,ckanext.ckanpackager --rednose
+script:
+  - pip install coveralls
+  - docker-compose build
+  - docker-compose run ckan
 
 after_success: coveralls
