--- a/ckanext/ckanpackager/theme/assets/webassets.yml
+++ b/ckanext/ckanpackager/theme/assets/webassets.yml
@@ -1,6 +1,9 @@
 main-js:
   output: ckanext-ckanpackager/%(version)s_main.js
   filters: rjsmin
+  extra:
+    preload:
+      - base/main
   contents:
     - scripts/modules/ckanpackager-download-link.js
 
