--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,18 +1,16 @@
-FROM naturalhistorymuseum/ckantest:0.1
+FROM naturalhistorymuseum/ckantest:0.2
 
 WORKDIR /base/src/ckanext-ckanpackager
 
-# copy over the ckanext-ckanpackager source
+# copy over the source
 COPY . .
 
-# install the dependencies
-RUN python setup.py develop && \
-    pip install -r requirements.txt && \
-    pip install -r dev_requirements.txt
+# install the base + test dependencies
+RUN pip install -e .[test]
 
 # this entrypoint ensures our service dependencies (postgresql, solr and redis) are running before
 # running the cmd
 ENTRYPOINT ["/bin/bash", "/opt/waits/basic.sh"]
 
 # run the tests with coverage output
-CMD ["pytest", "--cov=ckanext.ckanpackager", "--ckan-ini=test.ini", "tests"]
+CMD ["bash", "/opt/scripts/run-tests.sh", "ckanext.ckanpackager"]
