--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       - solr
       - redis
     volumes:
-      - .:/base/src/ckanext-ckanpackager
+      - ./ckanext:/base/src/ckanext-ckanpackager/ckanext
+      - ./tests:/base/src/ckanext-ckanpackager/tests
 
   solr:
     image: ckan/ckan-solr:2.9
