refactor: switch to less

--- a/ckanext/ckanpackager/theme/assets/webassets.yml
+++ b/ckanext/ckanpackager/theme/assets/webassets.yml
@@ -9,5 +9,8 @@ main-js:
 
 main-css:
   output: ckanext-ckanpackager/%(version)s_main.css
+  filters: less
+  config:
+    LESS_BIN: ../../../../../node_modules/less/bin/lessc
   contents:
-    - css/ckanpackager.css
+    - less/ckanpackager.less
