build: set changelog generation to incremental

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ name = "cz_nhm"
 version = "2.1.3"
 tag_format = "v$version"
 update_changelog_on_bump = true
-changelog_incremental = false
+changelog_incremental = true
 version_files = [
     "package.json",
     "pyproject.toml:version"
