build: add package data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,10 @@ zip-safe = false
 [tool.setuptools.packages.find]
 exclude = ["tests", "docs"]
 
+[tool.setuptools.package-data]
+"ckanext.ckanpackager" = ["package.json"]
+"ckanext.ckanpackager.theme" = ["**/*"]
+
 [tool.commitizen]
 name = "cz_nhm"
 version = "2.2.1"
