--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ classifiers = [
     "Programming Language :: Python :: 3.8"
 ]
 dependencies = [
-    "ckantools>=0.3.0",
-    "requests>=1.1.0"
+    "requests>=1.1.0",
+    "ckantools>=0.3.0"
 ]
 
 [project.optional-dependencies]
@@ -52,8 +52,7 @@ zip-safe = false
 exclude = ["tests", "docs"]
 
 [tool.setuptools.package-data]
-"ckanext.ckanpackager" = ["package.json"]
-"ckanext.ckanpackager.theme" = ["**/*"]
+"ckanext.ckanpackager.theme" = ["*", "**/*"]
 
 [tool.commitizen]
 name = "cz_nhm"
@@ -62,7 +61,6 @@ tag_format = "v$version"
 update_changelog_on_bump = true
 changelog_incremental = true
 version_files = [
-    "package.json",
     "pyproject.toml:version"
 ]
 
